# SIA-G02

./: .gitignore  README.md
tp1/: .gitignore  README.md  pyproject.toml
tp1/docs/: enunciado.md
tp1/scripts/: bfs_vs_dfs.py  bfs_vs_dfs_plots.py  bfs_vs_dfs_vs_iddfs.py  bfs_vs_dfs_vs_iddfs_plots.py  box_count_heuristic_study.py  box_count_traps_plots.py  dead_square_showcase.py  make_plots.py  plot_max_frontier.py  plot_weighted_tradeoff.py  run_batch.py  single_board_all_algorithms.py
tp1/tests/: test_animator.py  test_config.py  test_heuristics.py  test_search.py  test_state.py  test_successors.py
tp2/: .gitignore  AGENTS.md  CLAUDE.md  README.md  analyze_runs.py  collect_results.sh  compare_selection.py  config.yaml  experiment_configs.py  main.py  metodos_cruza_tp2.md  pyproject.toml  reconstruct.py  requirements.txt  run_many.sh  visualize.py
tp2/docs/: README.md  consigna-tp2.md  guia-diseno-y-defensa.md  implementacion-actual-del-repo.md  marco-teorico-ag.md  mutacion-ag.md  supervivencia-ag.md
tp2/mutation_analysis_zoom/: evolution_fitness.csv  final_fitness_summary.csv  run_results.csv
tp2/scripts/: COMPARE_METHOD_COMBINATIONS.md  README.md  analyze_runs.py  collect_results.sh  compare_crossover.py  compare_island_vs_no_island.py  compare_method_combinations.py  compare_method_combinations_config.yaml  compare_mutation.py  compare_mutation_analysis.py  compare_selection.py  compare_selection_analysis.py  compare_survival.py  compare_survival_analysis.py  cross_comparation.py  cross_comparation_logo.py  experiment_configs.py  opt_0_base.py  opt_1_precalculo.py  opt_2_fitness.py  opt_3_cruza.py  opt_4_mutacion.py  opt_4_mutation_vs_fixed.py  plot_mutation_analysis_from_csv.py  plot_selection_analysis_from_csv.py  reconstruct.py  run_many.sh  visualize.py
tp2/src/: __init__.py
tp2/tests/: __init__.py  test_canvas.py  test_config.py  test_ellipse_mode.py  test_engine.py  test_export.py  test_fitness.py  test_individual.py  test_island.py  (+1 more)
(+76 files in other folders)
