[project]
name = "tp1-search"
version = "0.1.0"
description = "Motor de búsqueda para Sokoban — TP1 SIA 2026 1C"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6",
]

[project.scripts]
tp1-search = "tp1_search.cli:main"
tp1-animate = "tp1_search.output.animator_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tp1_search"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
