[project]
name = "tp1-search"
version = "0.1.0"
description = "Motor de búsqueda para Sokoban — TP1 SIA 2026 1C"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6",
    "numpy>=1.26",
    "scipy>=1.17.1",
    "Pillow>=10.0",
    "opencv-python>=4.9",
]

[project.scripts]
tp1-search = "tp1_search.cli:main"
tp1-animate = "tp1_search.output.animator_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tp1_search"]

[dependency-groups]
dev = [
    "kaleido>=0.2",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pytest>=8.0",
]
